--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html(lang='en')
     head
         title Eve Echoes PI finder
+        meta(charset='utf-8')
+        meta(name='viewport', content='width=device-width, initial-scale=1')
     body
         include includes/header.pug
         block content
