--- a/views/constellation.pug
+++ b/views/constellation.pug
@@ -13,5 +13,7 @@ block content
         h2 Select Constellation
             form(action='/constellation', method="post", id='constellation')
                 select(name= 'constellation' onchange='this.form.submit()')
+                    option(disabled selected value) -- select an option --
                     each val in constellationArray
                         option(value=val) #{val}
+                    option(value='All') All
