--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ block content
         h2 Select Region
             form(action='/', method="post", id='region')
                 select(name= 'region' onchange='this.form.submit()')
+                    option(disabled selected value) -- select an option --
                     each val in regionArray
                         option(value=val) #{val}
 
