--- a/views/materials.pug
+++ b/views/materials.pug
@@ -15,9 +15,11 @@ block content
                     option(selected=constellation) #{constellation}
                     each val in constellationArray
                         option(value=val) #{val}
+                    option(value='All') All
 
         h2 Select Desired PI Material
             form(action='/materials', method="post", id='piMaterial')
                 select(name= 'piMaterial' onchange='this.form.submit()')
+                    option(disabled selected value) -- select an option --
                     each val in materialsArray
                         option(value=val) #{val}
