--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,10 +1,11 @@
 doctype html
 html(lang='en')
-    head
+
+    head(style="text-align:center;")
         title Eve Echoes PI finder
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
-    body
+    body(style="text-align:center;")
         include includes/header.pug
         block content
         include includes/footer.pug
