Add app file along with new footer Message

--- a/views/includes/footer.pug
+++ b/views/includes/footer.pug
@@ -1,2 +1,8 @@
 footer
-    p * Currently in Testing, Please PM venomousmonkey#4269 in Discord for issues or suggestions.
+    p * Currently in Testing, Please PM
+    p venomousmonkey#4269
+    p in Discord for issues or suggestions.
+    br
+    p * EVE Echoes, New Eden, and all related concepts therein
+    p    are the property of CCP Games and NetEase Games,
+    p    which has no affiliation with this website.
