--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,12 +3,11 @@ html(lang='en')
 
     head(style="text-align:center;")
         title Eve Echoes PI finder
-        script()
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
 
         link(rel="preconnect", href="https://fonts.googleapis.com")
-        link(rel="preconnect" href="https://fonts.gstatic.com", crossorigin)
+        link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap", rel="stylesheet")
         link(id="theme" rel="stylesheet", href="/static/style-light.css")
 
@@ -16,6 +15,4 @@ html(lang='en')
         include includes/header.pug
         block content
         block constellation
-    include includes/footer.pug
-
-href
+        include includes/footer.pug
