--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -10,9 +10,15 @@ html(lang='en')
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap", rel="stylesheet")
         link(id="theme" rel="stylesheet", href="/static/style-light.css")
+        style.
+            body {
+                visibility: hidden;
+                opacity: 0;
+            }
 
     body(style="text-align:center;")
         include includes/header.pug
         block content
         block constellation
         include includes/footer.pug
+
