testing on test server

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -21,4 +21,8 @@ html(lang='en')
         block content
         block constellation
         include includes/footer.pug
-
+script.
+    window.addEventListener('DOMContentLoaded', function () {
+        showTheme();
+        showContent();
+    });
