Default Theme darkmode.

--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -9,20 +9,12 @@ html(lang='en')
         link(rel="preconnect", href="https://fonts.googleapis.com")
         link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
         link(href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap", rel="stylesheet")
-        link(id="theme" rel="stylesheet", href="/static/style-light.css")
-        style.
-            body {
-                visibility: hidden;
-                opacity: 0;
-            }
+        link(id="theme" rel="stylesheet", href="/static/style_dm.css")
+
 
     body(style="text-align:center;")
         include includes/header.pug
         block content
         block constellation
         include includes/footer.pug
-script.
-    window.addEventListener('DOMContentLoaded', function () {
-        showTheme();
-        showContent();
-    });
+
