--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -1,5 +1,5 @@
 footer
-
+    p I apologize for the downtime, thank you for your patience!
     br
     p * EVE Echoes, New Eden, and all related concepts therein
     p    are the property of CCP Games and NetEase Games,
