--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
 
     head(style="text-align:center;")
-        script. 
+        script 
             async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6181091984755359"
             crossorigin="anonymous"
         title Eve Echoes PI finder
