--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang='en')
 
     head(style="text-align:center;")
-        script(async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6181091984755359" crossorigin="anonymous")
+        script(src="https://app.embed.im/snow.js" defer)
         title Eve Echoes PI finder
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1')
@@ -18,4 +18,3 @@ html(lang='en')
         block content
         block constellation
         include includes/footer.pug
-
