--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -1,7 +1,20 @@
 footer
-    p I apologize for the downtime, thank you for your patience!
-    br
     p * EVE Echoes, New Eden, and all related concepts therein
     p    are the property of CCP Games and NetEase Games,
     p    which has no affiliation with this website.
+
+    P Because heroku no longer is offering free web hosting 
+    P service, I'm kindly asking for donations to cover 
+    P the costs. Its not much ($5/Month) but since I dont play  
+    P much at all, I leave this up for everyone else. 
+    P I don't want to use ad's either. Thank you in Advance!
+
+    P P.S. Doners will be redirected to a good laugh.
+
+    form(action="https://www.paypal.com/donate" method="post" target="_top")
+        input type="hidden" name="business" value="JGBT3JPWW6Y8Y"
+        input type="hidden" name="no_recurring" value="0"
+        input type="hidden" name="currency_code" value="USD"
+        input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"
+        img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1"
 
