--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -9,7 +9,7 @@ footer
     P much at all, I leave this up for everyone else. 
     P I don't want to use ad's either. Thank you in Advance!
 
-    P P.S. Doners will be redirected to a good laugh.
+    P P.S. Donors will be redirected to a good laugh.
 
     form(action="https://www.paypal.com/donate" method="post" target="_top")
         input type="hidden" name="business" value="JGBT3JPWW6Y8Y"
