--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -12,8 +12,8 @@ footer
     P P.S. Donors will be redirected to a good laugh.
 
     div(id="donate-button-container")
-        div( id="donate-button")></div>
-        script(src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8")></script>
+        div( id="donate-button")
+        script(src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8")
         script
             PayPal.Donation.Button({
                 env:'production',
