--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -2,7 +2,7 @@ footer
     p * EVE Echoes, New Eden, and all related concepts therein
     p    are the property of CCP Games and NetEase Games,
     p    which has no affiliation with this website.
-
+    br
     P Because heroku no longer is offering free web hosting 
     P service, I'm kindly asking for donations to cover 
     P the costs. Its not much ($5/Month) but since I dont play  
@@ -14,7 +14,7 @@ footer
     div(id="donate-button-container")
         div( id="donate-button")
         script(src="https://www.paypalobjects.com/donate/sdk/donate-sdk.js" charset="UTF-8")
-        script
+        script.
             PayPal.Donation.Button({
                 env:'production',
                 hosted_button_id:'BSAGHQTGSKKZ8',
