--- a/src/views/thankYou.pug
+++ b/src/views/thankYou.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-    h1 Thank You for your kind donation! As a gift, please enjoy this .gif (Not Created by me)
+    h1 Thank You for your kind donation! 
+    P As a gift, please enjoy this .gif (Not Created by me)
 
     img(src = 'https://thumbs.gfycat.com/AltruisticUnkemptCowrie-max-1mb.gif')
 
