--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -3,11 +3,11 @@ footer
     p    are the property of CCP Games and NetEase Games,
     p    which has no affiliation with this website.
     br
-    P Because heroku no longer is offering free web hosting 
-    P service, I'm kindly asking for donations to cover 
-    P the costs. Its not much ($5/Month) but since I dont play  
-    P much at all, I leave this up for everyone else. 
-    P I don't want to use ad's either. Thank you in Advance!
+    p This site has been moved to a new free service.
+    p Because the service is free, the hosting server spools down
+    p with no activity. So initial loads may take a bit.
+    <hr>
+    p Donations will go towards upgrading the server to elminate this limitation.
 
     P P.S. Donors will be redirected to a good laugh.
 
