--- a/src/views/thankYou.pug
+++ b/src/views/thankYou.pug
@@ -4,7 +4,7 @@ block content
     h1 Thank You for your kind donation! 
     P As a gift, please enjoy this .gif (Not Created by me)
 
-    img(src = 'https://thumbs.gfycat.com/AltruisticUnkemptCowrie-max-1mb.gif')
+    img(src = 'bx1rb95r5v9b1.gif')
 
     form(action='/', method='get')
         button(type='submit' class='submit') Back to Home
