Remove footer message, add docker file.

--- a/src/views/includes/footer.pug
+++ b/src/views/includes/footer.pug
@@ -3,11 +3,8 @@ footer
     p    are the property of CCP Games and NetEase Games,
     p    which has no affiliation with this website.
     br
-    p This site has been moved to a new free service.
-    p Because the service is free, the hosting server spools down
-    p with no activity. So initial loads may take a bit.
     <hr>
-    p Donations will go towards upgrading the server to elminate this limitation.
+    p Keeping this ad free, buy me a coffee? 
 
     P P.S. Donors will be redirected to a good laugh.
 
