--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -1,5 +1,9 @@
 header
-    h1 EVE Echoes PI Search      
+    h1 EVE Echoes PI Search Has Moved (Yet Again)!
+    h2 Change your bookmarks!
+    p Please go to https://echoes-pi.venomore.com/
+    p This should be the last time I move the app.
+    p You should experience faster load times and no downtimes.
     button(id="theme-toggle" class="themeButton") Dark Mode
         script.
             document.addEventListener("DOMContentLoaded", () => {
