--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -14,5 +14,6 @@ html(lang='en')
 
     body(style="text-align:center;")
         include includes/header.pug
+        block content
 
         include includes/footer.pug
