--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -15,5 +15,6 @@ html(lang='en')
     body(style="text-align:center;")
         include includes/header.pug
         block content
+        block constellation
 
         include includes/footer.pug
