--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -1,9 +1,8 @@
 header
     h1 EVE Echoes PI Search Has Moved (Yet Again)!
     h2 Change your bookmarks!
-    p Please go to https://echoes-pi.venomore.com/
-    p This should be the last time I move the app.
-    p You should experience faster load times and no downtimes.
+    p Please go to: <a href="https://echoes-pi.venomore.com/" target="_blank">EVE Echoes PI Finder</a><br>
+    p This should be the last move of the app and you should experience faster load times with no downtimes.
     button(id="theme-toggle" class="themeButton") Dark Mode
         script.
             document.addEventListener("DOMContentLoaded", () => {
